2009-09-10  Jackson Harper  <jackson@ximian.com>

	* plugin.cpp|h: Update signature on SetProperty

2009-09-09  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (PluginInstance::PluginInstance): init
	culture/uiculture to null.
	(PluginInstance::~PluginInstance): free culture/uiculture, and
	also plug a leak by freeing onSourceDownloadProgressChanged,
	onSourceDownloadComplete, and splashscreensource.
	(PluginInstance::Initialize): parse culture/uiculture <param>
	tags.
	(PluginInstance::InitializePluginAppDomain): track change to
	InitializeDeployment argcount
	(PluginInstance::ManagedInitializeDeployment): add
	culture/uiculture args when calling the managed methods.

	r: andreia

2009-09-03  Stephane Delcroix  <sdelcroix@novell.com>

	* plugin-class.cpp|.g.cpp.in|.h.in: no longer auto generate bindings
	for MSI, copy paste the autogenerated from .g.cpp to .cpp. add a 
	SetProperty method and use to set the UriSource of the DZITS instead
	of creating a new DZITS everytime.

	* plugin-class.h|g.cpp: regen

2009-09-03  Alan McGovern  <amcgovern@novell.com>

	* plugin.cpp: It's possible that window will be null, so check
	  it exists before using it. r: toshok

2009-08-27  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (PluginInstance::NewStream): set the current deployment here.

	r: kangaroo
	
2009-08-26  Jackson Harper  <jackson@ximian.com>

	* plugin.cpp: check for the zip file magic instead of using file
	extension. r: toshok

2009-08-26  Alan McGovern  <amcgovern@novell.com>

	* cbinding.h: regen r: shana

2009-08-26  Jackson Harper  <jackson@ximian.com>

	* plugin.cpp: Use the xaml function for parsing bools so things
	like enablehtmlaccess=1 are handled properly.

	r: shana && kangaroo

2009-08-24  Sebastien Pouliot  <sebastien@ximian.com>

	* plugin-class.cpp: Free NPVariant array leaks

	r: andreia

2009-08-16  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (plugin_menu_about): we aren't doing previews
	anymore, we're doing betas.

	r: andreia
	