@@ -1,5 +1,12 @@
 2009-09-10  Jackson Harper  <jackson@ximian.com>
 
+	* namescope.h: Add an accessor for the names hashtable so we can
+	use them in plugin-debug.
+
+	r: spouliot
+
+2009-09-10  Jackson Harper  <jackson@ximian.com>
+
 	* xaml.cpp|h: Add flags to the callback data
 	- Add a pinvoke function that allows propertys to be delayed in
 	their set call until after the element is fully parsed.  This
